force-app/main/default/objects/Cost_Share__c/Cost_Share__c.object-meta.xml
<CustomObject>
    <label>Plan Cost Share</label>
    <nameField>
        <label>Cost Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Shares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>