force-app/main/default/objects/Cost_Share__c/fields/costShareLevel__c.field-meta.xml
<CustomField>
    <fullName>costShareLevel__c</fullName>
    <label>Cost Share Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CostShareLevels</valueSetName>
    </valueSet>
</CustomField>