force-app/main/default/objects/Cost_Share__c/fields/costShareType__c.field-meta.xml
<CustomField>
    <fullName>costShareType__c</fullName>
    <label>Cost Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cost_Share_Type</valueSetName>
    </valueSet>
</CustomField>