force-app/main/default/objects/Cost_Share__c/fields/costShareTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>costShareTypeDesc__c</fullName>
    <label>Cost Share Type Desc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cost_Share_Type_Desc</valueSetName>
    </valueSet>
</CustomField>