force-app/main/default/objects/Cost_Share__c/fields/default__c.field-meta.xml
<CustomField>
    <fullName>default__c</fullName>
    <label>Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>