force-app/main/default/objects/Cost_Share__c/fields/format__c.field-meta.xml
<CustomField>
    <fullName>format__c</fullName>
    <label>Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>