force-app/main/default/objects/Cost_Share__c/fields/from__c.field-meta.xml
<CustomField>
    <fullName>from__c</fullName>
    <label>From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>