force-app/main/default/objects/Cost_Share__c/fields/intervalName__c.field-meta.xml
<CustomField>
    <fullName>intervalName__c</fullName>
    <label>Interval Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interval_Name</valueSetName>
    </valueSet>
</CustomField>