force-app/main/default/objects/Cost_Share__c/fields/isRangeValidationEnforced__c.field-meta.xml
<CustomField>
    <fullName>isRangeValidationEnforced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Range Validation Enforced</label>
    <type>Checkbox</type>
</CustomField>