force-app/main/default/objects/Cost_Share__c/fields/isZeroAllowed__c.field-meta.xml
<CustomField>
    <fullName>isZeroAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Zero Allowed</label>
    <type>Checkbox</type>
</CustomField>