force-app/main/default/objects/Cost_Share__c/fields/max__c.field-meta.xml
<CustomField>
    <fullName>max__c</fullName>
    <label>Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>