force-app/main/default/objects/Cost_Share__c/fields/min__c.field-meta.xml
<CustomField>
    <fullName>min__c</fullName>
    <label>Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>