force-app/main/default/objects/Cost_Share__c/fields/plan__c.field-meta.xml
<CustomField>
    <fullName>plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Plan Cost Shares</relationshipLabel>
    <relationshipName>Cost_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>