force-app/main/default/objects/Cost_Share__c/fields/planService__c.field-meta.xml
<CustomField>
    <fullName>planService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Service</label>
    <referenceTo>Plan_Service__c</referenceTo>
    <relationshipName>Cost_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>