force-app/main/default/objects/Cost_Share__c/fields/productService__c.field-meta.xml
<CustomField>
    <fullName>productService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Service</label>
    <referenceTo>Product_Services__c</referenceTo>
    <relationshipName>Cost_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>