force-app/main/default/objects/Cost_Share__c/fields/providerTier__c.field-meta.xml
<CustomField>
    <fullName>providerTier__c</fullName>
    <label>Provider Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provider_Tier</valueSetName>
    </valueSet>
</CustomField>