force-app/main/default/objects/Cost_Share__c/fields/selectedValue__c.field-meta.xml
<CustomField>
    <fullName>selectedValue__c</fullName>
    <label>Selected Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>