force-app/main/default/objects/Cost_Share__c/fields/severityLevel__c.field-meta.xml
<CustomField>
    <fullName>severityLevel__c</fullName>
    <label>Severity Level</label>
    <length>18</length>
    <type>Text</type>
</CustomField>