force-app/main/default/objects/Cost_Share__c/fields/step__c.field-meta.xml
<CustomField>
    <fullName>step__c</fullName>
    <label>Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>