force-app/main/default/objects/Cost_Share__c/fields/to__c.field-meta.xml
<CustomField>
    <fullName>to__c</fullName>
    <label>To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>